fix secret problem

--- a/PersonApi/appsettings.Development.json
+++ b/PersonApi/appsettings.Development.json
@@ -14,7 +14,7 @@
     "ssl-required": "none",
     "resource": "api-client",
     "credentials": {
-      "secret": "LZTsmYpXGpGmzOoWbQRlVCTmIwD6CZbx"
+      "secret": "**********"
     },
     "confidential-port": 0
   }
